1992-05-12  dickey@software.org

	* src/dedring.c:
	realized that I was not using 'sort_key' when I had a pair
	of directories (ebpm4/src, ebpm4+/src) which did not sort
	properly.  Redid the logic using 'pathcmp()' which to compare
	the path-strings directly.

	* src/ded.h: 'sort_key' is obsolete

1992-05-12  ste_cm@software.org

	* src/ded.h: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-05-12  dickey@software.org

	* src/Makefile: added .c.lint rule

1992-05-12  ste_cm@software.org

	* src/Makefile: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-04-10  dickey@software.org

	* src/dedsort.c: don't sort empty lists!

1992-04-10  ste_cm@software.org

	* src/dedsort.c: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-04-09  dickey@software.org

	* src/dedring.c:
	hacks to force inserted pathnames to be resolved in case
	they are symbolic links

	* src/ded.c:
	corrected logic of 'edithead()' to use .new_wd member rather
	than redundant 'pathhead()' call.

	* src/ded.h: changed length of old_wd, new_wd to MAXPATHLEN

	* src/ded.c: changed name back again (was confused)

1992-04-08  dickey@software.org

	* src/ded.c: renamed 'edithead()' to 'edit_link()'

	* test/run_test.sh: typo

	* src/version.h:
	restructured so that there is not nearly as much global data.
	This allowed me to complete the split-screen operations,
	even making the two viewports have independent (nearly)
	filelists.

1992-04-08  ste_cm@software.org

	* src/version.h: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-04-08  dickey@software.org

	* src/dedview.c:
	reorganized 'showLINE()' so I can update other viewports,
	e.g., when +/- operations

1992-04-08  ste_cm@software.org

	* src/dedview.c: BASELINE Thu Jul 16 09:39:01 1992 -- EBPM4 support

1992-04-08  dickey@software.org

	* src/dedview.c: new internal procedure 'ring_view()' to ensure that we
	use actual-value of RING-struct/chdir when moving between
	viewports
