@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920512
+MANIFEST for ded, version t19920513
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
