@@ -1,3 +1,7 @@
+1992-05-13  dickey@software.org
+
+	* src/deddoit.c: 'system()' may set errno w/o returning a -1 code.
+
 1992-05-12  dickey@software.org
 
 	* src/dedring.c:
